tests/ui/type_decl.ml
type t = A | B
let entrypoint _ = 0
